# mlp-cpp-from-scratch

./: README.md
app/console_app/: main.cpp
app/gui_app/: CMakeLists.txt  drawingcanvas.cpp  drawingcanvas.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
docs/: plot.gnuplot
lib/matrix/: CMakeLists.txt
lib/matrix/include/matrix/: matrix.hpp
lib/matrix/src/: matrix.cpp
lib/ml/: CMakeLists.txt
lib/ml/include/ml/: mnist_loader.hpp  neural_network.hpp
lib/ml/src/: mnist_loader.cpp  neural_network.cpp
tests/: CMakeLists.txt  test_matrix.cpp  test_mnist.py  test_mnist_loader.cpp  test_neural_network.cpp
